ckanext/who_afro/assets/css/who-afro.css
/* ... */
div.main.search .wrapper > div.primary > .module > .pagination-wrapper > ul.pagination > li.page-item.active > a {
    background-color: white;
    border: 0;
    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.04);
}

/* Countries */
div.countries {
    min-height: auto;
}

div.main.countries {
    padding-bottom: 0;
    padding-top: 0;
}

.countries > .promoted-background .container {
    position: relative;
}

.countries > .promoted-background .page-title > img {
    border-radius: 50%;
}

.countries > .promoted-background .page-title > span {
    padding-left: 12px;
}

.countries > .promoted-background ul.country-data {
    list-style: none;
    margin: 0;
    padding: 0;
}

.countries > .promoted-background ul.country-data > li {
    display: inline-flex;
    width: 90%;
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
    padding: 6px 0 8px;
    border-bottom: 1px solid var(--who-blue-65-percent);
}

.countries > .promoted-background ul.country-data > li:last-child {
    border-bottom: 0;
}

.countries > .promoted-background ul.country-data > li > span.country-data-value {
    margin-left: auto;
}

.countries > .promoted-background ul.country-data > li > a.country-data-ccs {
    margin-left: auto;
    color: #FFFFFF;
}

.countries .contries-powerbi {
    margin: 54px 0 64px;
    padding: 0;
}

.countries .contries-powerbi div[class^="col-lg"],
.countries .contries-powerbi div[class^="col-md"] {
    padding: 0;
}

.countries .contries-powerbi div[class^="col-"] {
    margin-bottom: 44px;
}

.countries .contries-powerbi div[class^="col-"]:last-child {
    margin-bottom: 0;
}

/* dev banner */
.dev-banner-container {
    display: none;
    width: 100%;
}

.nav-for-large-screen {
    display: block;
}

.account-masthead .account ul li.dev-banner {
    display: none;
}

.dev-banner-mobile {
    display: none;
}


@media only screen and (max-width: 627px) {

    .dev-banner-container .row {
        --bs-gutter-x: 0;
    }

    .account-masthead {
        height: 100%;
    }

    .dev-banner-container {
        display: block;
    }

    .nav-for-large-screen {
        display: none;
    }

    .account-masthead .container {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        padding: 0;
    }

    .dev-banner-container .list-unstyled {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .dev-banner-container .list-unstyled li {
        width: 100%;
    }

    .account-masthead .account ul li a {
        text-align: center;
        padding: 0;
        margin: 0;
    }

    .dev-banner-mobile {
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
        padding: 10px;
        pointer-events: none;
        background-color: white;
        margin: 0;
        width: 100%;
    }

    .dev-banner-mobile a {
        color: var(--secondary-who-blue);
        font-weight: 400;
        font-size: 12px;
        line-height: 16px;
        text-decoration: none;
    }

    .dev-banner-mobile a .clickable {
        margin-left: 6px;
        pointer-events: auto;
        font-weight: 700;
        text-decoration: underline;
    }

    .dev-banner-mobile a i {
        margin-right: 6px;
        margin-top: -2px;
    }

}

@media only screen and (min-width: 628px) {

    .account-masthead .account ul li.dev-banner  {
        display: block;
    }

    .account-masthead .account {
        float: left;
    }

    nav.account {
        width: 100%;
    }

    nav.account ul.list-unstyled {
        padding: 0;
        margin: 0;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        width: 100%;
    }

    .dev-banner {
        margin-right: auto;
        pointer-events: none;
    }

    ul li.dev-banner a {
        margin-left: 0 !important;
        padding-left: 0 !important;
    }

    .dev-banner a .clickable {
        margin-left: 6px;
        pointer-events: auto;
        font-weight: 700;
        text-decoration: underline;
    }

}

.ckan-circle-exclamation {
    position: relative;
    display: inline-block;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    text-align: center;
    line-height: 16px;
    font-size: 16px;
    margin-right: 7px;
    vertical-align: middle;
    margin-top: -1px;
}

.ckan-circle-exclamation::before {
    content: '!';
    position: absolute;
    top: 50%;
    left: 51%;
    transform: translate(-50%, -50%);
    font-size: 10px;
    line-height: 1;
    font-weight: 900;
}

.ckan-circle-exclamation.white {
    color: var(--primary-navy);
    border: 2px solid var(--primary-navy);
}

.ckan-circle-exclamation.secondary-who-blue {
    color: var(--secondary-who-blue);
    border: 2px solid var(--secondary-who-blue);
}

.logout-button {
    height: 70px;
}

.insights-page .main{
    padding-top: 0px;
}

.insights-page .featured-insight{
    padding: 50px 10px ;
}

.insights-page .featured-dashboard{
    width: 100%;
    height: 720px;
    margin: 30px 0px;
}

.terms_and_conditions p {
    margin-top: 32px;
    text-align: justify;
}

.terms_and_conditions p:last-child {
    margin-bottom: 24px;
}

.terms_and_conditions h2 {
    margin-top: 24px;
}

.resource-view .resource-view-filters a.btn.btn-primary {
    display: none;
}

.ckanext-datapreview > iframe {
    min-height: 675px;
}

.caret {
    display: inline-block;
    margin-left: 2px;
    vertical-align: middle;
    border-top: 4px dashed;
    border-top: 4px solid;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
}

#dropdownDownloadFormat{
    padding:10px;
}

.about {
    padding: 16px;
}

.about ul {
    list-style-type: none;
    padding-left: 0;
    padding-bottom: 12px;
}

.about p.sub, .about p.appendix {
    color: #000000;
    text-align: justify;
}

.about p.sub {
    margin-bottom: 16px;
}
/* ... */

